# myOpenGLProject

./: CMakeLists.txt  camera.h  main.cpp  sdlglutils.cpp  sdlglutils.h  shader.h
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: shader.fs
textures/: main.cpp
